--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <header class="header">
       <div class="main-container">
-        <div class="header__content flex-container">
+        <div class="flex-container flex-container--header">
           <a href="./index.html" class="link logo header__logo"
             ><span class="logo-accent">Web</span>Studio</a
           >
@@ -73,7 +73,7 @@
     <!--hero-->
     <section class="hero">
       <div class="main-container">
-        <h1 class="hero__title hero__title--magrin">
+        <h1 class="title hero__title hero__title--magrin">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
@@ -89,7 +89,7 @@
     <!--Our goals-->
     <section class="section goals">
       <div class="main-container">
-        <h2 class="title--hidden">Наши преимущества</h2>
+        <h2 class="title title--hidden">Наши преимущества</h2>
         <ul class="list goals__list">
           <li class="goals__item">
             <div class="goals__picture">
@@ -143,7 +143,7 @@
       </div>
     </section>
     <!--About us-->
-    <section class="about">
+    <section class="section about">
       <div class="main-container">
         <h2 class="title section-title section-title--margins">
           Чем мы занимаемся
@@ -404,185 +404,6 @@
         </ul>
       </div>
     </section>
-    <!--Clients-->
-    <section class="section">
-      <div class="main-container">
-        <h2 class="title section-title section-title--margins">
-          Постоянные клиенты
-        </h2>
-        <ul class="list client-list">
-          <li class="client-list__item">
-            <a href="" class="client-list__link">
-              <div class="client-list__thmb">
-                <svg class="icon client-list__icon">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-company1"
-                  ></use>
-                </svg>
-              </div>
-            </a>
-          </li>
-          <li class="client-list__item">
-            <a href="" class="client-list__link"
-              ><div class="client-list__thmb">
-                <svg class="icon client-list__icon">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-company2"
-                  ></use>
-                </svg></div
-            ></a>
-          </li>
-          <li class="client-list__item">
-            <a href="" class="client-list__link"
-              ><div class="client-list__thmb">
-                <svg class="icon client-list__icon">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-company3"
-                  ></use>
-                </svg></div
-            ></a>
-          </li>
-          <li class="client-list__item">
-            <a href="" class="client-list__link"
-              ><div class="client-list__thmb">
-                <svg class="icon client-list__icon">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-company4"
-                  ></use>
-                </svg></div
-            ></a>
-          </li>
-          <li class="client-list__item">
-            <a href="" class="client-list__link"
-              ><div class="client-list__thmb">
-                <svg class="icon client-list__icon">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-company5"
-                  ></use>
-                </svg></div
-            ></a>
-          </li>
-          <li class="client-list__item">
-            <a href="" class="client-list__link"
-              ><div class="client-list__thmb">
-                <svg class="icon client-list__icon">
-                  <use
-                    href="./images/icons/symbol-defs.svg#icon-company6"
-                  ></use>
-                </svg></div
-            ></a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <main></main>
-    <!--footer-->
-    <footer class="footer">
-      <div class="main-container">
-        <div class="footer__content">
-          <div class="footer__adress">
-            <a href="./index.html" class="logo footer__logo"
-              ><span class="logo-accent">Web</span>Studio</a
-            >
-            <address class="address">
-              <ul class="list adress-list">
-                <li class="adress-list__item">
-                  <a
-                    class="adress-list__link adress-list__link--location"
-                    href="https://www.google.pl/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru"
-                    target="_blank"
-                  >
-                    г. Киев, пр-т Леси Украинки, 26
-                  </a>
-                </li>
-                <li class="adress-list__item">
-                  <a class="adress-list__link" href="mailto:info@example.com">
-                    info@example.com</a
-                  >
-                </li>
-                <li class="adress-list__item">
-                  <a class="adress-list__link" href="tel:+380991111111">
-                    +38 099 111 11 11</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </div>
-          <!--end footer-adress-->
-          <div class="footer-social">
-            <p class=".paragraf footer__title footer__title--margin">
-              присоединяйтесь
-            </p>
-            <ul class="list social-list">
-              <li class="social-list__item">
-                <a href="" class="social-list__link social-list__link--footer">
-                  <svg class="icon social-icon">
-                    <use href="./images/icons/symbol-defs.svg#icon-insta"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list__item">
-                <a href="" class="social-list__link social-list__link--footer">
-                  <svg class="icon social-icon">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-twitter"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list__item">
-                <a href="" class="social-list__link social-list__link--footer">
-                  <svg class="icon social-icon">
-                    <use href="./images/icons/symbol-defs.svg#icon-fb"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list__item">
-                <a href="" class="social-list__link social-list__link--footer">
-                  <svg class="icon social-icon">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-linked"
-                    ></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <!--footer mailing form-->
-          <div class="footer-mailing">
-            <p class=".paragraf footer__title footer__title--margin">
-              Подпишитесь на рассылку
-            </p>
-            <form
-              class="mailing-form"
-              action="#"
-              autocomplete="off"
-              novalidate
-              name="mailing-form"
-            >
-              <label class="mailing-form__lable" for="mailing-email"></label>
-              <input
-                class="mailing-form__input"
-                type="email"
-                id="mailing-email"
-                name="mailing-email"
-                placeholder="E-mail"
-              />
-              <button
-                class="button button-base button-base--primary button-base--mailing"
-                type="submit"
-              >
-                Подписаться
-                <!-- <span class="mailing-button-text">Подписаться</span>-->
-                <svg class="icon mailing-form__icon">
-                  <use href="./images/icons/symbol-defs.svg#send"></use>
-                </svg>
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
   <!--modal-->
   <div class="back-drop is-hidden" data-modal>
