--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!--Header-->
     <header class="header">
       <div class="main-container">
-        <div class="header__content flex-container">
+        <div class="flex-container flex-container--header">
           <a href="./index.html" class="link logo header__logo"
             ><span class="logo-accent">Web</span>Studio</a
           >
