--- a/index.html
+++ b/index.html
@@ -68,24 +68,64 @@
             </li>
           </ul>
           <!--Mobile menu button-->
-          <!-- <div class="mobile-menu">-->
           <button class="mobile-menu__button" type="button">
             <svg class="mobile-menu__icon">
               <use href="./images/icons/symbol-defs.svg#menu"></use>
             </svg>
           </button>
-          <!-- </div>-->
-          <!--mobile menu-->
-          <div class="back-drop is-hidden" data-menu>
-            <div class="modal">
-              <button class="modal__close" type="button" data-menu-close>
-                <svg class="icon modal__close-icon">
-                  <use href="./images/icons/symbol-defs.svg#icon-close"></use>
-                </svg>
-              </button>
-            </div>
+        </div>
+      </div>
+      <!--mobile menu-->
+      <div class="mobile-menu is-hidden">
+        <div class="main-container">
+          <button class="menu-close-btn" type="button">
+            <svg class="icon menu__close-icon">
+              <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="list mobile-menu-list">
+            <li class="mobile-menu-item">
+              <a href="index.html" class="link mobile-menu-link">Студия</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="portfolio.html" class="link mobile-menu-link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="link mobile-menu-link">Контакты</a>
+            </li>
+          </ul>
+          <div class="mobile-menu-thmb">
+            <ul class="list mobile-contact-list">
+              <li class="mobile-menu-item--tel">
+                <a href="tel:+380961111111" class="link mobile-menu-link">
+                  096 111 11 11</a
+                >
+              </li>
+              <li class="mobile-menu-item--mail">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="link mobile-menu-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="list mobile-social-list">
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">Instagram</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">Twitter</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">Facebook</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">LinkedIn</a>
+              </li>
+            </ul>
           </div>
-          <!--end MENU-->
         </div>
       </div>
     </header>
@@ -663,4 +703,5 @@
     </div>
   </div>
   <script src="./modal.js"></script>
+  <script src="./mobile-menu.js"></script>
 </html>
