--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <body class="body">
     <!--Header-->
     <header class="header">
-      <div class="main-container">
+      <div class="main-container main-container--header">
         <div class="flex-container flex-container--header">
           <a href="./index.html" class="link logo header__logo"
             ><span class="logo-accent">Web</span>Studio</a
@@ -26,12 +26,14 @@
           <nav>
             <ul class="list navigation-list">
               <li class="navigation-list__item">
-                <a href="./index.html" class="link navigation__link">Студия</a>
+                <a
+                  href="./index.html"
+                  class="link navigation__link navigation__link--current"
+                  >Студия</a
+                >
               </li>
               <li class="navigation-list__item">
-                <a
-                  href="./portfolio.html"
-                  class="link navigation__link navigation__link--current"
+                <a href="./portfolio.html" class="link navigation__link"
                   >Портфолио</a
                 >
               </li>
@@ -65,6 +67,65 @@
               >
             </li>
           </ul>
+          <!--Mobile menu button-->
+          <button class="mobile-menu__button" type="button" data-menu-open>
+            <svg class="mobile-menu__icon">
+              <use href="./images/icons/symbol-defs.svg#menu"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+      <!--mobile menu-->
+      <div class="mobile-menu is-hidden">
+        <div class="main-container">
+          <button class="menu-close-btn" type="button">
+            <svg class="icon menu__close-icon">
+              <use href="./images/icons/symbol-defs.svg#icon-close"></use>
+            </svg>
+          </button>
+          <ul class="list mobile-menu-list">
+            <li class="mobile-menu-item">
+              <a href="index.html" class="link mobile-menu-link">Студия</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="portfolio.html" class="link mobile-menu-link"
+                >Портфолио</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="link mobile-menu-link">Контакты</a>
+            </li>
+          </ul>
+          <div class="mobile-menu-thmb">
+            <ul class="list mobile-contact-list">
+              <li class="mobile-menu-item--tel">
+                <a href="tel:+380961111111" class="link mobile-menu-link">
+                  096 111 11 11</a
+                >
+              </li>
+              <li class="mobile-menu-item--mail">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="link mobile-menu-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="list mobile-social-list">
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">Instagram</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">Twitter</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">Facebook</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a href="" class="link mobile-menu-link">LinkedIn</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </header>
@@ -452,5 +513,6 @@
         </div>
       </div>
     </footer>
+    <script src="./mobile-menu.js"></script>
   </body>
 </html>
