--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               </svg>
             </div>
             <h3 class="title goals__title">Внимание к деталям</h3>
-            <p>
+            <p class="paragraf">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
@@ -169,7 +169,7 @@
               </svg>
             </div>
             <h3 class="title goals__title">Пунктуальность</h3>
-            <p>
+            <p class="paragraf">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
@@ -181,7 +181,7 @@
               </svg>
             </div>
             <h3 class="title goals__title">Планирование</h3>
-            <p>
+            <p class="paragraf">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
@@ -193,7 +193,7 @@
               </svg>
             </div>
             <h3 class="title goals__title">Современные технологии</h3>
-            <p>
+            <p class="paragraf">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -568,7 +568,7 @@
           </div>
           <!--end footer-adress-->
           <div class="footer-social">
-            <p class=".paragraf footer__title footer__title--margin">
+            <p class="paragraf footer__title footer__title--margin">
               присоединяйтесь
             </p>
             <ul class="list social-list">
@@ -608,7 +608,7 @@
           </div>
           <!--footer mailing form-->
           <div class="footer-mailing">
-            <p class=".paragraf footer__title footer__title--margin">
+            <p class="paragraf footer__title footer__title--margin">
               Подпишитесь на рассылку
             </p>
             <form
