--- a/portfolio.html
+++ b/portfolio.html
@@ -26,14 +26,12 @@
           <nav>
             <ul class="list navigation-list">
               <li class="navigation-list__item">
-                <a
-                  href="./index.html"
-                  class="link navigation__link navigation__link--current"
-                  >Студия</a
-                >
+                <a href="./index.html" class="link navigation__link">Студия</a>
               </li>
               <li class="navigation-list__item">
-                <a href="./portfolio.html" class="link navigation__link"
+                <a
+                  href="./portfolio.html"
+                  class="link navigation__link navigation__link--current"
                   >Портфолио</a
                 >
               </li>
